--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,5 @@
 spring.application.name=library-management-app
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.jpa.properties.hibernate.default_schema=library
 spring.datasource.username=postgres
 spring.datasource.password=1234
 
@@ -8,3 +7,9 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
+spring.security.user.name=user
+spring.security.user.password=password
+
+spring.h2.console.enabled=false
+
+spring.profiles.active=test
