--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,9 +29,13 @@ services:
       postgres:
         condition: service_healthy
     environment:
+      SPRING_PROFILES_ACTIVE: prod
       SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/postgres
       SPRING_DATASOURCE_USERNAME: postgres
       SPRING_DATASOURCE_PASSWORD: password
+    volumes:
+      - ./src/main/resources/application-prod.properties:/config/application-prod.properties
+      - ./src/test/resources/application-test.properties:/config/application-test.properties
 
 volumes:
   postgres_data:
